# teletweet

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  pyproject.toml  requirements_dev.txt  update-requirements.sh
src/: routes.py  telegram_handler.py  twitter_handler.py
teletweet/: __main__.py  config.py
